# apriltags_cuda

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  applycustomargs.sh  apriltag_detect.cu  apriltag_gpu.cu  apriltag_gpu.h  apriltag_utils.cu  apriltag_utils.h  args  build.sh  clang-format.cmake  cuda_frc971.cu  docker_build.sh  gpu_detector_test.cu  http_server.cpp  install_deps.sh  labeling_allegretti_2019_BKE.cu  labeling_allegretti_2019_BKE.h  line_fit_filter.cu  line_fit_filter.h  ntexample.cpp  opencv_cuda_demo.cu  points.cu  test_cuda.cu  test_runner.sh  threshold.cu  video_processor.cu  video_processor.h  visualize.cu  ws_client.cpp  ws_server.cpp  ws_server.cu  ws_test.cpp
.github/workflows/: cmake-single-platform.yml  cpp-linter.yml  linter.yml
Installer/: AddAppsToPath.csh  AddAppsToPath.sh  AprilTagsPipeline.service  README.md  install.sh  uninstall.sh
Installer/AprilTags/: AprilTagsManager.sh  ApriltagsManager.sh  args
app/: app.py  requirements.txt
app/templates/: index.html
data/: calibrationmatrix.json  camlocations
data/calibration/: calibrationmatrix.json  calibrationmatrix_100.json  calibrationmatrix_1690.json  calibrationmatrix_199.json  calibrationmatrix_766.json  calibrationmatrix_Module_YL20230518V0.json  calibrationmatrix_UC762.json  calibrationmatrix_UC7626.json  calibrationmatrix_UC762W.json  calibrationmatrix_cam11.json  calibrationmatrix_cam12.json  calibrationmatrix_cam13.json  calibrationmatrix_cam14.json
data/camlocs/: revb-left_front-offset.json  revb-right_front-offset.json
doc/: rotations.tex
public/: index.html
src/: BooleanValueSender.cpp  BooleanValueSender.h  DoubleArraySender.cpp  DoubleArraySender.h  DoubleValueSender.cpp  DoubleValueSender.h  IntegerArraySender.cpp  IntegerArraySender.h  IntegerValueSender.cpp  IntegerValueSender.h  NetworkTablesConfig.h  NetworkTablesUtil.cpp  NetworkTablesUtil.h  TwoDimensionalDoubleArraySender.h  apriltag_gpu.cu  apriltag_gpu.h  cameraexception.h  cuda_frc971.h  gpu_detector_test.cu  json_test.cpp  line_fit_filter.h  ntexample.cpp  points.cu  points.h  robot_rotations.py  testpic.cpp  threshold.cu  threshold.h  ws_server.cu
web/: index.html
